; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_icase.c_test_checkout_icase__conflicts_with_casechanged_subtrees.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_icase.c_test_checkout_icase__conflicts_with_casechanged_subtrees.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_CHECKOUT_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GIT_CHECKOUT_SAFE = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@GIT_OBJECT_COMMIT = common dso_local global i32 0, align 4
@GIT_RESET_HARD = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"testrepo/AB\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"testrepo/AB/C\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"testrepo/AB/C/3.txt\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"Foobar!\0A\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [20 x i8] c"refs/heads/subtrees\00", align 1
@GIT_OBJECT_ANY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_checkout_icase__conflicts_with_casechanged_subtrees() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__, align 4
  %6 = bitcast %struct.TYPE_4__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_CHECKOUT_OPTIONS_INIT to i8*), i64 4, i1 false)
  %7 = load i32, i32* @GIT_CHECKOUT_SAFE, align 4
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @repo, align 4
  %10 = call i32 @git_reference_lookup_resolved(i32** %1, i32 %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 100)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32, i32* @repo, align 4
  %13 = load i32*, i32** %1, align 8
  %14 = call i32* @git_reference_target(i32* %13)
  %15 = load i32, i32* @GIT_OBJECT_COMMIT, align 4
  %16 = call i32 @git_object_lookup(i32** %2, i32 %12, i32* %14, i32 %15)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32, i32* @repo, align 4
  %19 = load i32*, i32** %2, align 8
  %20 = load i32, i32* @GIT_RESET_HARD, align 4
  %21 = call i32 @git_reset(i32 %18, i32* %19, i32 %20, i32* null)
  %22 = call i32 @cl_git_pass(i32 %21)
  %23 = call i32 @p_mkdir(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 511)
  %24 = call i32 @cl_must_pass(i32 %23)
  %25 = call i32 @p_mkdir(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i32 511)
  %26 = call i32 @cl_must_pass(i32 %25)
  %27 = load i32, i32* @O_RDWR, align 4
  %28 = load i32, i32* @O_CREAT, align 4
  %29 = or i32 %27, %28
  %30 = call i32 @cl_git_write2file(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i32 8, i32 %29, i32 438)
  %31 = load i32, i32* @repo, align 4
  %32 = call i32 @git_reference_name_to_id(i32* %4, i32 %31, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0))
  %33 = call i32 @cl_git_pass(i32 %32)
  %34 = load i32, i32* @repo, align 4
  %35 = load i32, i32* @GIT_OBJECT_ANY, align 4
  %36 = call i32 @git_object_lookup(i32** %3, i32 %34, i32* %4, i32 %35)
  %37 = call i32 @cl_git_pass(i32 %36)
  %38 = load i32, i32* @repo, align 4
  %39 = load i32*, i32** %3, align 8
  %40 = call i32 @git_checkout_tree(i32 %38, i32* %39, %struct.TYPE_4__* %5)
  %41 = call i32 @cl_git_fail(i32 %40)
  %42 = load i32*, i32** %2, align 8
  %43 = call i32 @git_object_free(i32* %42)
  %44 = load i32*, i32** %3, align 8
  %45 = call i32 @git_object_free(i32* %44)
  %46 = load i32*, i32** %1, align 8
  %47 = call i32 @git_reference_free(i32* %46)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_reference_lookup_resolved(i32**, i32, i8*, i32) #2

declare dso_local i32 @git_object_lookup(i32**, i32, i32*, i32) #2

declare dso_local i32* @git_reference_target(i32*) #2

declare dso_local i32 @git_reset(i32, i32*, i32, i32*) #2

declare dso_local i32 @cl_must_pass(i32) #2

declare dso_local i32 @p_mkdir(i8*, i32) #2

declare dso_local i32 @cl_git_write2file(i8*, i8*, i32, i32, i32) #2

declare dso_local i32 @git_reference_name_to_id(i32*, i32, i8*) #2

declare dso_local i32 @cl_git_fail(i32) #2

declare dso_local i32 @git_checkout_tree(i32, i32*, %struct.TYPE_4__*) #2

declare dso_local i32 @git_object_free(i32*) #2

declare dso_local i32 @git_reference_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
